--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "npx electron .",
+    "build:win": "electron-packager . --platform=win32 --arch=x64 --out=release-builds --overwrite"
   },
   "keywords": [],
   "author": "",
